--- a/offshore_FINO1_intCoupled/WRFtoSOWFA_fino1.ipynb
+++ b/offshore_FINO1_intCoupled/WRFtoSOWFA_fino1.ipynb
@@ -1223,7 +1223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1237,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
